lab1/Test/L1-A-10-31.output
Error Type A at Line 8
Error Type A at Line 12
Error Type B at Line 14
Error Type B at Line 18
Error Type A at Line 20
Error Type B at Line 23
Error Type B at Line 25
Error Type A at Line 35
