lab1/Test/L1-A-10-31.cmm
struct {
  int rNVxsSZBIZE , BmDCAN0n99rYSwjQ , h0N78 = ssbUPWJnzVZ 
    = _DRASX <= nBYGACXHt12ZHYH - C9GJ4Bt ( e63 , rUSDOsQGlpA5SPSL 
    || uu4YUlGttMw8J && VnqMqkAss4PVrO55r2C2 > SXeO2 + 
    M_Oyx / ! - ( PZKy0BL64Am && KRPVWdQLsknq8j != ggCLsGjQHCKcoZ0U8 
    * ! p91KNW_Yg [ KgzhouiTx9t1OGVa1Ij = Ko5zyY || UIXcO5Vgq2zq4XVrS6VX 
    == Xs5 [ mIzMvQtjBxRFdmjav / ( EpsBYxtNdpZBz < ( j8fXpdZ 
    @|| KZxC8CMoEnJqyj4lJZli >= Vhvx ) ) . LfXNUrog4lxK 
    + SsOcJMBht46toEJX - 2080567014.1967392742 ] - Iv9yE8WisH 
    * 81842249 ] * CPpcirXZfpIF5fsAU ( ) ) . saSvZRp7F3RmTDQ 
    ) ;
  float YZ68rspoY [ 2016313098 ] #;
}IlNRWw4v ( ) {
}. 
int ;
struct jdCdeu {
  int JK0wT6o2uUqtb4MPm ;
int }gWoKrajhQ6T 
;
struct s_QXOiKNrzeFfXE7t2a &;
int PCDwMYPce ( int WSfdvX7JMUd4y73uWC8 , int N4n1ILJpAlZP 
  ) {
else   drmmF0DB_bdof ;
  if ( hN6LPtmsiCn0mbv9 )   if ( mxKAqwWWmbuHA3xF 
    <= ) {
    while ( kgOluG9B6J7t )     E0acdeWOY2xl ;

  }else   HMEO0wNx2luRt8jxC ;

else   if ( YOpdC8Iocs7oJIgCVQFI )   return pYEJwEgpLjW 
    ;


}
int ';
int U18aqmRAQ3kG5O3E_ , ZmE9ocEzyxf 

;
